RESOLVED FIXED118623
[iOS] TextTrackRepresentation not cleared when captions are disabled
https://bugs.webkit.org/show_bug.cgi?id=118623
Summary [iOS] TextTrackRepresentation not cleared when captions are disabled
Eric Carlson
Reported 2013-07-12 16:13:26 PDT
The early return from MediaControlTextTrackContainerElement::updateDisplay when captions are not visible prevents the TextTrackRepresentation from being cleared.
Attachments
Proposed patch (1.45 KB, patch)
2013-07-12 16:23 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2013-07-12 16:23:00 PDT
Created attachment 206578 [details] Proposed patch
Eric Carlson
Comment 2 2013-07-12 16:37:00 PDT
Note You need to log in before you can comment on or make changes to this bug.