[iOS] TextTrackRepresentation not cleared when captions are disabled https://bugs.webkit.org/show_bug.cgi?id=118623

Reviewed by Dean Jackson.

* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlTextTrackContainerElement::updateDisplay): Do not return immediately
    when captions are disabled so the necessary cleanup happens.


Canonical link: https://commits.webkit.org/136543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152607 268f45cc-cd09-0410-ab3c-d52691b4dbfc